--- a/chat/build.gradle
+++ b/chat/build.gradle
@@ -43,6 +43,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'com.google.firebase:firebase-admin:9.1.1'
+
 }
 
 dependencyManagement {
