--- a/user/build.gradle
+++ b/user/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'com.google.firebase:firebase-admin:9.1.1'
 
     // oauth 라이브러리
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
