--- a/promise/build.gradle
+++ b/promise/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'com.google.firebase:firebase-admin:9.1.1'
+
 }
 
 dependencyManagement {
