--- a/P_ON/pubspec.yaml
+++ b/P_ON/pubspec.yaml
@@ -68,6 +68,13 @@ dependencies:
 
   #ui - util
   keyboard_utils_fork: ^0.0.4
+    # am, pm = 오전, 오후로 바꿈
+  day_night_time_picker:
+    git:
+      url: https://github.com/HyeonBhinKim/day_night_time_picker.git
+      ref: '990d08d'
+
+
 
   #network
   dio: ^5.0.0
@@ -81,7 +88,6 @@ dependencies:
   percent_indicator: ^4.2.3
   flutter_riverpod: ^2.4.5
   flutter_naver_map: ^1.0.2
-  day_night_time_picker: ^1.3.0+1
   location: ^5.0.3
   stomp_dart_client: ^1.0.0
   speech_to_text: ^6.4.0
