--- a/chatbot/app/requirements.txt
+++ b/chatbot/app/requirements.txt
@@ -1,47 +1,40 @@
 aiohttp==3.8.6
 aiosignal==1.3.1
-annotated-types==0.5.0
+annotated-types==0.6.0
 anyio==3.7.1
 async-timeout==4.0.3
-asynctest==0.13.0
 attrs==23.1.0
-backoff==2.2.1
 certifi==2023.7.22
 charset-normalizer==3.3.2
-cohere==4.34
 colorama==0.4.6
+dataclasses-json==0.6.2
 distro==1.8.0
 exceptiongroup==1.1.3
-fastavro==1.7.4
-filelock==3.12.2
-frozenlist==1.3.3
-fsspec==2023.1.0
+frozenlist==1.4.0
 greenlet==3.0.1
 h11==0.14.0
-httpcore==0.17.3
-httpx==0.24.1
-huggingface-hub==0.16.4
+httpcore==1.0.2
+httpx==0.25.1
 idna==3.4
-importlib-metadata==6.7.0
-langchain==0.0.27
+jsonpatch==1.33
+jsonpointer==2.4
+langchain==0.0.335
+langsmith==0.0.63
+marshmallow==3.20.1
 multidict==6.0.4
-nlpcloud==1.1.44
-numpy==1.21.6
-openai==1.2.2
+mypy-extensions==1.0.0
+numpy==1.26.2
+openai==1.2.3
 packaging==23.2
-pandas==1.3.5
-pydantic==1.9.0
-pydantic-core==2.10.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
+pydantic==2.4.2
+pydantic_core==2.10.1
 PyYAML==6.0.1
 requests==2.31.0
-six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.23
-tabulate==0.9.0
+tenacity==8.2.3
 tqdm==4.66.1
-typing-extensions==4.7.1
+typing-inspect==0.9.0
+typing_extensions==4.8.0
 urllib3==2.0.7
 yarl==1.9.2
-zipp==3.15.0
