--- a/chatbot/app/requirements.txt
+++ b/chatbot/app/requirements.txt
@@ -6,10 +6,12 @@ async-timeout==4.0.3
 attrs==23.1.0
 certifi==2023.7.22
 charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
 dataclasses-json==0.6.2
 distro==1.8.0
 exceptiongroup==1.1.3
+fastapi==0.104.1
 frozenlist==1.4.0
 greenlet==3.0.1
 h11==0.14.0
@@ -18,6 +20,7 @@ httpx==0.25.1
 idna==3.4
 jsonpatch==1.33
 jsonpointer==2.4
+kafka-python3==3.0.0
 langchain==0.0.335
 langsmith==0.0.63
 marshmallow==3.20.1
@@ -32,9 +35,11 @@ PyYAML==6.0.1
 requests==2.31.0
 sniffio==1.3.0
 SQLAlchemy==2.0.23
+starlette==0.27.0
 tenacity==8.2.3
 tqdm==4.66.1
 typing-inspect==0.9.0
 typing_extensions==4.8.0
 urllib3==2.0.7
+uvicorn==0.24.0.post1
 yarl==1.9.2
