--- a/calendar/.gitignore
+++ b/calendar/.gitignore
@@ -35,5 +35,4 @@ out/
 
 ### VS Code ###
 .vscode/
-/src/main/resources/application-*.yml
-/src/main/resources/calendar-*.yml
+/src/main/resources/firebase/wanibini-d1599-firebase-adminsdk-4c6ay-8ea8b10e56.json
