--- a/calendar/build.gradle
+++ b/calendar/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 
+    // firebase
+    implementation 'com.google.firebase:firebase-admin:9.1.1'
+
     // kafka
     implementation 'org.springframework.kafka:spring-kafka'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
