--- a/P_ON/pubspec.yaml
+++ b/P_ON/pubspec.yaml
@@ -145,6 +145,7 @@ flutter:
     - assets/image/main/핑키1.png
     - assets/image/main/핑키2.png
     - assets/image/main/핑키3.png
+    - assets/image/main/핑키4.png
     - assets/image/icon/kakao.png
     - assets/image/main/login.png
 
