--- a/chatbot/app/requirements.txt
+++ b/chatbot/app/requirements.txt
@@ -9,6 +9,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 dataclasses-json==0.6.2
+dateparser==1.1.8
 distro==1.8.0
 exceptiongroup==1.1.3
 fastapi==0.104.1
@@ -22,6 +23,7 @@ jsonpatch==1.33
 jsonpointer==2.4
 kafka-python3==3.0.0
 langchain==0.0.335
+langchain-experimental==0.0.40
 langsmith==0.0.63
 marshmallow==3.20.1
 multidict==6.0.4
@@ -29,17 +31,25 @@ mypy-extensions==1.0.0
 numpy==1.26.2
 openai==1.2.3
 packaging==23.2
+pandas==2.1.3
 pydantic==2.4.2
 pydantic_core==2.10.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
 PyYAML==6.0.1
+regex==2023.10.3
 requests==2.31.0
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.23
 starlette==0.27.0
+tabulate==0.9.0
 tenacity==8.2.3
 tqdm==4.66.1
 typing-inspect==0.9.0
 typing_extensions==4.8.0
+tzdata==2023.3
+tzlocal==5.2
 urllib3==2.0.7
 uvicorn==0.24.0.post1
 yarl==1.9.2
