--- a/chatbot/app/requirements.txt
+++ b/chatbot/app/requirements.txt
@@ -1,18 +1,26 @@
+aiofiles==23.2.1
 aiohttp==3.8.6
+aiokafka==0.8.1
 aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==3.7.1
 async-timeout==4.0.3
+asyncer==0.0.2
 attrs==23.1.0
 certifi==2023.7.22
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+confluent-kafka==2.3.0
 dataclasses-json==0.6.2
 dateparser==1.1.8
 distro==1.8.0
+dnspython==2.4.2
+email-validator==2.1.0.post1
 exceptiongroup==1.1.3
+fast-kafka-api==0.0.1
 fastapi==0.104.1
+fastcore==1.5.29
 frozenlist==1.4.0
 greenlet==3.0.1
 h11==0.14.0
@@ -21,6 +29,7 @@ httpx==0.25.1
 idna==3.4
 jsonpatch==1.33
 jsonpointer==2.4
+kafka-python==2.0.2
 kafka-python3==3.0.0
 langchain==0.0.335
 langchain-experimental==0.0.40
@@ -28,13 +37,16 @@ langsmith==0.0.63
 marshmallow==3.20.1
 multidict==6.0.4
 mypy-extensions==1.0.0
+nest-asyncio==1.5.8
 numpy==1.26.2
 openai==1.2.3
 packaging==23.2
 pandas==2.1.3
 pydantic==2.4.2
 pydantic_core==2.10.1
+pymongo==4.6.0
 python-dateutil==2.8.2
+python-multipart==0.0.6
 pytz==2023.3.post1
 PyYAML==6.0.1
 regex==2023.10.3
