--- a/P_ON/pubspec.yaml
+++ b/P_ON/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # of the product and file versions while build-number is used as the build suffix.
 
 # TODO: 버전 올리고 build
-version: 1.0.1+14
+version: 1.0.1+15
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -130,6 +130,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
+    - assets/
     - assets/json/
     - assets/image/
     - assets/image/icon/
