--- a/P_ON/pubspec.yaml
+++ b/P_ON/pubspec.yaml
@@ -32,7 +32,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  url_launcher: ^6.2.1
   #splash creator
   flutter_native_splash: ^2.3.0
 
